{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 58,
  "lineage": "5467af80-3226-59da-b61b-be2c1f403e3e",
  "resources": [
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:route-table/rtb-08f261cc6e20bf58a",
            "id": "rtb-08f261cc6e20bf58a",
            "owner_id": "390298806374",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "apne2-fastcampus-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-private",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__private",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b12db4cecfd9af4f",
            "route_table_id": "rtb-08f261cc6e20bf58a",
            "subnet_id": "subnet-0a3f4bbfe55a222c1"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dd9ba27e72dbef2",
            "route_table_id": "rtb-08f261cc6e20bf58a",
            "subnet_id": "subnet-0c84bda359f4cfe18"
          },
          "dependencies": [
            "module.route_table__private.aws_route_table.this",
            "module.subnet_group.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route",
      "name": "ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ec9ed011d034550",
            "id": "r-rtb-029d5d54915abb8511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-029d5d54915abb851",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:route-table/rtb-029d5d54915abb851",
            "id": "rtb-029d5d54915abb851",
            "owner_id": "390298806374",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "apne2-fastcampus-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-public",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/route-table",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "route-table",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table__public",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a88f2c9e213a3881",
            "route_table_id": "rtb-029d5d54915abb851",
            "subnet_id": "subnet-09485d7e9d8243d3d"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007c950870cc45e80",
            "route_table_id": "rtb-029d5d54915abb851",
            "subnet_id": "subnet-07f5114d5d78fa935"
          },
          "dependencies": [
            "module.route_table__public.aws_route_table.this",
            "module.subnet_group.aws_subnet.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group[\"private\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apne2-fastcampus-private-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:subnet/subnet-0a3f4bbfe55a222c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.222.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3f4bbfe55a222c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390298806374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne2-fastcampus-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-private-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "apne2-fastcampus-private-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:subnet/subnet-0c84bda359f4cfe18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.222.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c84bda359f4cfe18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390298806374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne2-fastcampus-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-private-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-private",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_group[\"public\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apne2-fastcampus-public-001/az1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:subnet/subnet-09485d7e9d8243d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.222.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09485d7e9d8243d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390298806374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne2-fastcampus-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-public-001/az1",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "apne2-fastcampus-public-002/az2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:subnet/subnet-07f5114d5d78fa935",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.222.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f5114d5d78fa935",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "390298806374",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "apne2-fastcampus-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus-public-002/az2",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "apne2-fastcampus-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:internet-gateway/igw-03ec9ed011d034550",
            "id": "igw-03ec9ed011d034550",
            "owner_id": "390298806374",
            "tags": {
              "Name": "apne2-fastcampus",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-002d6e03714e1d1b1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390298806374:vpc/vpc-002d6e03714e1d1b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.222.0.0/16",
            "default_network_acl_id": "acl-08873254c3e426d49",
            "default_route_table_id": "rtb-026cb768d082e31bb",
            "default_security_group_id": "sg-0762cfca78876f12c",
            "dhcp_options_id": "dopt-08b609897b054ce21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-002d6e03714e1d1b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026cb768d082e31bb",
            "owner_id": "390298806374",
            "tags": {
              "Name": "apne2-fastcampus",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-fastcampus",
              "Owner": "posquit0",
              "Project": "Network",
              "module.terraform.io/full-name": "terraform-aws-network/vpc",
              "module.terraform.io/instance": "apne2-fastcampus",
              "module.terraform.io/name": "vpc",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            }
          }
        }
      ]
    }
  ]
}